unzip gzipped csv data format